Fix card overlap

--- a/word_match/static/css/app.css
+++ b/word_match/static/css/app.css
@@ -83,7 +83,7 @@ body {
 
 #card-field {
   padding-left: 2em;
-  height: 20em;
+  min-height: 20em;
 }
 
 #my-deck {
